--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <h2></h2>
+    <p><a href="https://youtu.be/pIdiIWPw2cA?si=9b0V9BdPqjBAAHKd">wanna laugh?</a></p>
 </body>
 </html>
