--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>Melon charentais</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Hello</h1>
-    <p><a href="https://youtu.be/pIdiIWPw2cA?si=9b0V9BdPqjBAAHKd">wanna laugh?</a></p>
+   <h1>My artworks</h1>
+   <p><a href="https://www.instagram.com/dinnomo.s/">instagram</a></p>
+   
+    <div id="main">
+        <img src="paysage.jpg" alt="">
+        <h2>Projet Photo Publicitaire</h2>
+        <p>credits <a href="https://www.instagram.com/bslfrd/">Basile Friderici</a></p>
+    </div>
+
+
 </body>
 </html>
